--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.9"
   }
